customer-mdm-service/salesforce/src/objects/CambioClienteResuelto__e.object
<CustomObject>
    <label>Cambio de cliente resuelto</label>
    <pluralLabel>Cambios de cliente resueltos</pluralLabel>
    <description>A change request was approved or rejected. When approved, the contact already carries the change; the MDM reads it and projects it to the hotels.</description>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>Id de la solicitud (MDM)</label>
        <type>Text</type>
        <length>64</length>
    </fields>
    <fields>
        <fullName>MdmId__c</fullName>
        <label>Cliente (MDM)</label>
        <type>Text</type>
        <length>64</length>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Text</type>
        <length>20</length>
    </fields>
</CustomObject>